--- a/Predicting_Used_Car.ipynb
+++ b/Predicting_Used_Car.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP50xrviJvqOBFLxkZEJB+5",
+      "authorship_tag": "ABX9TyPx7LAe9IY9gsy4s/jgo5g7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "iQPQh78YwQY8"
       },
@@ -36,8 +36,77 @@
       "source": [
         "import tensorflow as tf # for models\n",
         "import pandas as pd #for data preprocessing\n",
-        "import seaborn as sbn # for visualization"
+        "import seaborn as sns # for visualization"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data =pd.read_csv(\"train1.csv\",\",\")"
+      ],
+      "metadata": {
+        "id": "iLiV2srXVkeL",
+        "outputId": "92f07e37-1f64-4f74-e81c-9e2e5986ef2a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-2-e289368aba35>:1: FutureWarning: In a future version of pandas all arguments of read_csv except for the argument 'filepath_or_buffer' will be keyword-only.\n",
+            "  data =pd.read_csv(\"train1.csv\",\",\")\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Jh66H9K4Vknd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "itCAVxejVkr0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8JZYazqJVkyW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "h7bH_ZISVk2f"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "eyDBLeOTVk6u"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
