--- a/Predicting_Used_Car.ipynb
+++ b/Predicting_Used_Car.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbEEuwZNcQfcPL12+g3h1j",
+      "authorship_tag": "ABX9TyPiVWm3TferJyJXQUPC35Ye",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,10 +57,10 @@
       ],
       "metadata": {
         "id": "Jh66H9K4Vknd",
-        "outputId": "ab93c347-4375-4079-aa73-a31d72782adc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ab93c347-4375-4079-aa73-a31d72782adc"
       },
       "execution_count": 4,
       "outputs": [
@@ -92,10 +92,10 @@
       ],
       "metadata": {
         "id": "itCAVxejVkr0",
-        "outputId": "4e451a4e-569b-483d-d859-850f021151cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4e451a4e-569b-483d-d859-850f021151cf"
       },
       "execution_count": 5,
       "outputs": [
@@ -121,11 +121,11 @@
       ],
       "metadata": {
         "id": "8JZYazqJVkyW",
-        "outputId": "6554f26d-5c2b-4679-dc93-7930b1a6e92d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "6554f26d-5c2b-4679-dc93-7930b1a6e92d"
       },
       "execution_count": 10,
       "outputs": [
@@ -151,13 +151,51 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# We will now convert our Data into Tensor"
+      ],
       "metadata": {
-        "id": "h7bH_ZISVk2f"
+        "id": "iMqs-0j9xp94"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_data=tf.constant(data)\n",
+        "tensor_data=tf.cast(tensor_data,dtype=tf.float32)\n",
+        "print(tensor_data)"
+      ],
+      "metadata": {
+        "id": "h7bH_ZISVk2f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c5091e5e-9b07-4058-ec52-c5d4c0533c03"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[[1.000000e+00 5.356510e+05 7.981860e+05 ... 7.300000e+01 1.230000e+02\n",
+            "  3.513180e+05]\n",
+            " [2.000000e+00 5.919110e+05 8.610560e+05 ... 7.400000e+01 9.500000e+01\n",
+            "  2.850015e+05]\n",
+            " [3.000000e+00 6.869900e+05 7.707620e+05 ... 5.300000e+01 9.700000e+01\n",
+            "  2.153860e+05]\n",
+            " ...\n",
+            " [9.980000e+02 6.463440e+05 8.427330e+05 ... 1.130000e+02 8.900000e+01\n",
+            "  4.058710e+05]\n",
+            " [9.990000e+02 5.355590e+05 7.324390e+05 ... 1.120000e+02 1.280000e+02\n",
+            "  7.439800e+04]\n",
+            " [1.000000e+03 5.901050e+05 7.797430e+05 ... 9.900000e+01 9.600000e+01\n",
+            "  4.149385e+05]], shape=(1000, 12), dtype=float32)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
