--- a/Predicting_Used_Car.ipynb
+++ b/Predicting_Used_Car.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiVWm3TferJyJXQUPC35Ye",
+      "authorship_tag": "ABX9TyNzlpyFR+ZKsKwxGjG1cEHz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "iQPQh78YwQY8"
       },
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "iLiV2srXVkeL"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
         },
         "outputId": "ab93c347-4375-4079-aa73-a31d72782adc"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -97,7 +97,7 @@
         },
         "outputId": "4e451a4e-569b-483d-d859-850f021151cf"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -127,7 +127,7 @@
         },
         "outputId": "6554f26d-5c2b-4679-dc93-7930b1a6e92d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -173,7 +173,7 @@
         },
         "outputId": "c5091e5e-9b07-4058-ec52-c5d4c0533c03"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,13 +198,50 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# We will have to shuffle our Data in order to avoid bias in our project"
+      ],
       "metadata": {
-        "id": "eyDBLeOTVk6u"
+        "id": "whIWKmkWzClp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_data=tf.random.shuffle(tensor_data)\n",
+        "print(tensor_data)"
+      ],
+      "metadata": {
+        "id": "eyDBLeOTVk6u",
+        "outputId": "d59cfac3-6a4d-431b-bb64-332771216cf4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[[6.740000e+02 6.878190e+05 8.158960e+05 ... 7.400000e+01 1.100000e+02\n",
+            "  5.173660e+05]\n",
+            " [8.560000e+02 5.631320e+05 8.055850e+05 ... 8.800000e+01 8.500000e+01\n",
+            "  1.183485e+05]\n",
+            " [3.560000e+02 6.691460e+05 8.283520e+05 ... 9.000000e+01 1.380000e+02\n",
+            "  2.191270e+05]\n",
+            " ...\n",
+            " [4.730000e+02 5.083700e+05 8.621880e+05 ... 9.900000e+01 1.140000e+02\n",
+            "  5.016625e+05]\n",
+            " [6.300000e+01 5.525110e+05 8.778460e+05 ... 5.800000e+01 1.120000e+02\n",
+            "  1.716200e+05]\n",
+            " [4.400000e+02 6.139750e+05 8.141260e+05 ... 7.200000e+01 1.230000e+02\n",
+            "  4.197130e+05]], shape=(1000, 12), dtype=float32)\n"
+          ]
+        }
+      ]
     }
   ]
 }
