--- a/Predicting_Used_Car.ipynb
+++ b/Predicting_Used_Car.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzlpyFR+ZKsKwxGjG1cEHz",
+      "authorship_tag": "ABX9TyOwEd3+GhqzutwCR4DtMKbU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "iQPQh78YwQY8"
       },
@@ -36,8 +36,18 @@
       "source": [
         "import tensorflow as tf # for models\n",
         "import pandas as pd #for data preprocessing\n",
-        "import seaborn as sns # for visualization"
+        "import seaborn as sns # for visualization\n",
+        "from tensorflow.keras.layers import Normalization"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Data Preparation"
+      ],
+      "metadata": {
+        "id": "iBHseuPQIF7V"
+      }
     },
     {
       "cell_type": "code",
@@ -47,7 +57,7 @@
       "metadata": {
         "id": "iLiV2srXVkeL"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -60,9 +70,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ab93c347-4375-4079-aa73-a31d72782adc"
+        "outputId": "a4e59d77-fd71-4273-b01e-d81ef5e9ede6"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -72,7 +82,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -95,9 +105,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4e451a4e-569b-483d-d859-850f021151cf"
+        "outputId": "a165ee1f-2c88-4082-8110-c00c8e9d7030"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -109,7 +119,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -125,9 +135,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "6554f26d-5c2b-4679-dc93-7930b1a6e92d"
+        "outputId": "04c54338-6aeb-4517-d34f-7aa61fc62127"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -171,9 +181,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c5091e5e-9b07-4058-ec52-c5d4c0533c03"
+        "outputId": "fab1b8cf-7b3f-456f-ed8b-8d6d86b0e12c"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +224,128 @@
       ],
       "metadata": {
         "id": "eyDBLeOTVk6u",
-        "outputId": "d59cfac3-6a4d-431b-bb64-332771216cf4",
+        "outputId": "13014145-7c17-4f36-9d11-24447000bbc4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[[6.100000e+02 6.918810e+05 8.818620e+05 ... 8.300000e+01 7.000000e+01\n",
+            "  4.224170e+05]\n",
+            " [2.420000e+02 6.440970e+05 7.539620e+05 ... 8.700000e+01 6.900000e+01\n",
+            "  4.140350e+05]\n",
+            " [8.460000e+02 5.994010e+05 8.200270e+05 ... 9.200000e+01 1.260000e+02\n",
+            "  2.435655e+05]\n",
+            " ...\n",
+            " [8.480000e+02 6.383180e+05 8.659540e+05 ... 6.800000e+01 1.180000e+02\n",
+            "  4.769695e+05]\n",
+            " [2.180000e+02 6.297860e+05 7.372810e+05 ... 8.500000e+01 1.370000e+02\n",
+            "  2.299820e+05]\n",
+            " [5.290000e+02 6.306590e+05 8.214540e+05 ... 1.070000e+02 8.400000e+01\n",
+            "  1.358740e+05]], shape=(1000, 12), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let us get X and y Data"
+      ],
+      "metadata": {
+        "id": "MvIB2REMJOit"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X=tensor_data[:,3:-1]\n",
+        "print(X[:5])"
+      ],
+      "metadata": {
+        "id": "kDQd9t53IO8P",
+        "outputId": "4a4b29d8-5d9f-4c57-d7ac-a87f98ac9a27",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[[5.00000e+00 9.08390e+04 3.00000e+00 3.00000e+00 1.10000e+01 1.68000e+02\n",
+            "  8.30000e+01 7.00000e+01]\n",
+            " [3.00000e+00 7.17010e+04 5.00000e+00 3.00000e+00 1.30000e+01 1.69000e+02\n",
+            "  8.70000e+01 6.90000e+01]\n",
+            " [5.00000e+00 1.16362e+05 4.00000e+00 3.00000e+00 8.00000e+00 1.75000e+02\n",
+            "  9.20000e+01 1.26000e+02]\n",
+            " [4.00000e+00 1.29251e+05 2.00000e+00 3.00000e+00 1.30000e+01 1.42000e+02\n",
+            "  7.70000e+01 1.10000e+02]\n",
+            " [7.00000e+00 1.44949e+05 5.00000e+00 6.00000e+00 1.20000e+01 1.51000e+02\n",
+            "  6.80000e+01 1.08000e+02]], shape=(5, 8), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y=tensor_data[:,-1]\n",
+        "y=tf.expand_dims(y,axis=-1)\n",
+        "print(y[:5])"
+      ],
+      "metadata": {
+        "id": "215o7jpLIPBD",
+        "outputId": "130a02d2-85db-4972-d70c-f3256b152ad6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[[422417. ]\n",
+            " [414035. ]\n",
+            " [243565.5]\n",
+            " [178642.5]\n",
+            " [ 94467.5]], shape=(5, 1), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let us Normalize our Data"
+      ],
+      "metadata": {
+        "id": "NF0tef23RB_Z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "normalizer =Normalization(axis=-1,mean=5,variance=4)\n",
+        "x_normalized=tf.constant([[3,4,5,6,7],\n",
+        "                          [4,5,6,7,8]])\n",
+        "normalizer(x_normalized)"
+      ],
+      "metadata": {
+        "id": "N-c4hhHXIPGG",
+        "outputId": "8c3c3384-1f71-4e39-9eec-ca8da6ae2823",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -222,23 +353,129 @@
       "execution_count": 17,
       "outputs": [
         {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 5), dtype=float32, numpy=\n",
+              "array([[-1. , -0.5,  0. ,  0.5,  1. ],\n",
+              "       [-0.5,  0. ,  0.5,  1. ,  1.5]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "normalizer =Normalization()\n",
+        "x_normalized=tf.constant([[3,4,5,6,7],\n",
+        "                          [4,5,6,7,8],\n",
+        "                          [32,5,54,3,5]])\n",
+        "normalizer.adapt(x_normalized)\n",
+        "normalizer(x_normalized)"
+      ],
+      "metadata": {
+        "id": "REw7sXuQIPKn",
+        "outputId": "fe3e7dc2-1e16-4be5-ae7b-33a70b2a5b82",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3, 5), dtype=float32, numpy=\n",
+              "array([[-0.7439795 , -1.4142132 , -0.72885984,  0.3922322 ,  0.2672614 ],\n",
+              "       [-0.6695816 ,  0.7071071 , -0.6851283 ,  0.9805806 ,  1.0690452 ],\n",
+              "       [ 1.4135611 ,  0.7071071 ,  1.4139882 , -1.3728131 , -1.3363061 ]],\n",
+              "      dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "GmPi-RzyQ99E"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "normalizer =Normalization()\n",
+        "\n",
+        "normalizer.adapt(X)\n",
+        "normalizer(X)[:5]"
+      ],
+      "metadata": {
+        "id": "VDPU_f91IPO_",
+        "outputId": "bf0ba94d-3deb-4b1f-859a-a8f1c6894803",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(5, 8), dtype=float32, numpy=\n",
+              "array([[ 0.25549737, -0.32384172,  0.00855905, -0.9181607 , -0.28034025,\n",
+              "         0.05742051, -0.07538921, -1.5879279 ],\n",
+              "       [-0.9084981 , -0.980695  ,  1.4350011 , -0.9181607 ,  0.6167485 ,\n",
+              "         0.10929114,  0.1196692 , -1.6354381 ],\n",
+              "       [ 0.25549737,  0.55215716,  0.7217801 , -0.9181607 , -1.6259733 ,\n",
+              "         0.4205149 ,  0.36349222,  1.0726343 ],\n",
+              "       [-0.3265004 ,  0.99453264, -0.704662  , -0.9181607 ,  0.6167485 ,\n",
+              "        -1.2912159 , -0.36797684,  0.3124737 ],\n",
+              "       [ 1.4194928 ,  1.5333184 ,  1.4350011 ,  0.14452489,  0.16820414,\n",
+              "        -0.8243802 , -0.80685824,  0.21745363]], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(X[:5])"
+      ],
+      "metadata": {
+        "id": "FMFaxujuIPTm",
+        "outputId": "70944448-2805-496a-ef41-c99b3c5fa33e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "tf.Tensor(\n",
-            "[[6.740000e+02 6.878190e+05 8.158960e+05 ... 7.400000e+01 1.100000e+02\n",
-            "  5.173660e+05]\n",
-            " [8.560000e+02 5.631320e+05 8.055850e+05 ... 8.800000e+01 8.500000e+01\n",
-            "  1.183485e+05]\n",
-            " [3.560000e+02 6.691460e+05 8.283520e+05 ... 9.000000e+01 1.380000e+02\n",
-            "  2.191270e+05]\n",
-            " ...\n",
-            " [4.730000e+02 5.083700e+05 8.621880e+05 ... 9.900000e+01 1.140000e+02\n",
-            "  5.016625e+05]\n",
-            " [6.300000e+01 5.525110e+05 8.778460e+05 ... 5.800000e+01 1.120000e+02\n",
-            "  1.716200e+05]\n",
-            " [4.400000e+02 6.139750e+05 8.141260e+05 ... 7.200000e+01 1.230000e+02\n",
-            "  4.197130e+05]], shape=(1000, 12), dtype=float32)\n"
+            "[[5.00000e+00 9.08390e+04 3.00000e+00 3.00000e+00 1.10000e+01 1.68000e+02\n",
+            "  8.30000e+01 7.00000e+01]\n",
+            " [3.00000e+00 7.17010e+04 5.00000e+00 3.00000e+00 1.30000e+01 1.69000e+02\n",
+            "  8.70000e+01 6.90000e+01]\n",
+            " [5.00000e+00 1.16362e+05 4.00000e+00 3.00000e+00 8.00000e+00 1.75000e+02\n",
+            "  9.20000e+01 1.26000e+02]\n",
+            " [4.00000e+00 1.29251e+05 2.00000e+00 3.00000e+00 1.30000e+01 1.42000e+02\n",
+            "  7.70000e+01 1.10000e+02]\n",
+            " [7.00000e+00 1.44949e+05 5.00000e+00 6.00000e+00 1.20000e+01 1.51000e+02\n",
+            "  6.80000e+01 1.08000e+02]], shape=(5, 8), dtype=float32)\n"
           ]
         }
       ]
