--- a/Predicting_Used_Car.ipynb
+++ b/Predicting_Used_Car.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwEd3+GhqzutwCR4DtMKbU",
+      "authorship_tag": "ABX9TyOaa7spWh2tpvIi4QQpyvLq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 23,
       "metadata": {
         "id": "iQPQh78YwQY8"
       },
@@ -37,7 +37,7 @@
         "import tensorflow as tf # for models\n",
         "import pandas as pd #for data preprocessing\n",
         "import seaborn as sns # for visualization\n",
-        "from tensorflow.keras.layers import Normalization"
+        "from tensorflow.keras.layers import Normalization,Dense"
       ]
     },
     {
@@ -269,11 +269,11 @@
         "print(X[:5])"
       ],
       "metadata": {
-        "id": "kDQd9t53IO8P",
-        "outputId": "4a4b29d8-5d9f-4c57-d7ac-a87f98ac9a27",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kDQd9t53IO8P",
+        "outputId": "4a4b29d8-5d9f-4c57-d7ac-a87f98ac9a27"
       },
       "execution_count": 10,
       "outputs": [
@@ -304,11 +304,11 @@
         "print(y[:5])"
       ],
       "metadata": {
-        "id": "215o7jpLIPBD",
-        "outputId": "130a02d2-85db-4972-d70c-f3256b152ad6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "215o7jpLIPBD",
+        "outputId": "130a02d2-85db-4972-d70c-f3256b152ad6"
       },
       "execution_count": 13,
       "outputs": [
@@ -344,11 +344,11 @@
         "normalizer(x_normalized)"
       ],
       "metadata": {
-        "id": "N-c4hhHXIPGG",
-        "outputId": "8c3c3384-1f71-4e39-9eec-ca8da6ae2823",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "N-c4hhHXIPGG",
+        "outputId": "8c3c3384-1f71-4e39-9eec-ca8da6ae2823"
       },
       "execution_count": 17,
       "outputs": [
@@ -377,11 +377,11 @@
         "normalizer(x_normalized)"
       ],
       "metadata": {
-        "id": "REw7sXuQIPKn",
-        "outputId": "fe3e7dc2-1e16-4be5-ae7b-33a70b2a5b82",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "REw7sXuQIPKn",
+        "outputId": "fe3e7dc2-1e16-4be5-ae7b-33a70b2a5b82"
       },
       "execution_count": 19,
       "outputs": [
@@ -417,11 +417,11 @@
         "normalizer(X)[:5]"
       ],
       "metadata": {
-        "id": "VDPU_f91IPO_",
-        "outputId": "bf0ba94d-3deb-4b1f-859a-a8f1c6894803",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VDPU_f91IPO_",
+        "outputId": "bf0ba94d-3deb-4b1f-859a-a8f1c6894803"
       },
       "execution_count": 21,
       "outputs": [
@@ -453,11 +453,11 @@
         "print(X[:5])"
       ],
       "metadata": {
-        "id": "FMFaxujuIPTm",
-        "outputId": "70944448-2805-496a-ef41-c99b3c5fa33e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FMFaxujuIPTm",
+        "outputId": "70944448-2805-496a-ef41-c99b3c5fa33e"
       },
       "execution_count": 22,
       "outputs": [
@@ -479,6 +479,54 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model=tf.keras.Sequential([normalizer,\n",
+        "                           Dense(1)\n",
+        "                           ])\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "PTTdxinlTTPo",
+        "outputId": "7b677dc0-914e-4000-9cb5-8c2dce30b9f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " normalization_6 (Normalizat  (None, 8)                17        \n",
+            " ion)                                                            \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, 1)                 9         \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 26\n",
+            "Trainable params: 9\n",
+            "Non-trainable params: 17\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nSdyllBaTTol"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
